# TerrGen3D

./: CMakeLists.txt  README.md
cmake/: FindGLFW.cmake  FindNoise.cmake  Findbgfx.cmake
src/: app.cpp  app.h  main.cpp  terrain.cpp  terrain.h  utils.cpp  utils.h
src/shaders/: fs_terrain.sc  varying.def.sc  vs_terrain.sc
